firebase cloudstore setup individual list item CRUD done

--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -1,5 +1,11 @@
 {
   "enter_email": "أدخل البريد الإلكتروني",
   "enter_password": "أدخل كلمة المرور",
-  "login": "تسجيل الدخول"
+  "login": "تسجيل الدخول",
+  "to_do": "لفعل",
+  "completed_tasks": "المهام المكتملة",
+  "add_todo_item": "Aأضف مهمة",
+  "enter_valid_task": "يرجى إدخال مهمة صالحة.",
+  "settings": "إعدادات التطبيق",
+  "clear_all_tasks": "مسح جميع العناصر المطلوب القيام بها"
 }
