login and sign up added log out added in settings

--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -7,5 +7,6 @@
   "add_todo_item": "Aأضف مهمة",
   "enter_valid_task": "يرجى إدخال مهمة صالحة.",
   "settings": "إعدادات التطبيق",
-  "clear_all_tasks": "مسح جميع العناصر المطلوب القيام بها"
+  "clear_all_tasks": "مسح جميع العناصر المطلوب القيام بها",
+  "sign_up": "اشتراك"
 }
